Enabling 12 -Fix for " Enabling_12 - tu_01_01_01_02 - Too much white space in template #303 " where you can drag the buttons and it scrolls the activity.

--- a/Enabling_12_html/styles/enabling_12_dlilearn.css
+++ b/Enabling_12_html/styles/enabling_12_dlilearn.css
@@ -57,6 +57,10 @@ html body {
 #main{
 	font-family: 'Arial';
 	position: relative;
+	overflow: hidden;
+	width: 840px;
+	height: 525px;
+	/* background-color: green; */
 }
 #videoContainer1{
     background-color: transparent;
